# tracks-api

./: .example.env  .gitignore  CONTRIBUTING.md  README.md  docker-compose.prod.yml  docker-compose.subset.yml  docker-compose.test.yml  docker-compose.yml
.github/: CODEOWNERS
.github/workflows/: ci-cd.yml  container-cleanup.yml
api/: pyproject.toml
auth-service/: .example.env  README.md  dockerfile  pyproject.toml  requirements.txt
auth-service/src/: main.py
auth-service/src/blueprints/: router.py
auth-service/src/blueprints/api/: router.py
auth-service/src/blueprints/api/v1/: router.py
auth-service/src/blueprints/api/v1/auth/: routes.py
auth-service/src/blueprints/api/v1/docs/: routes.py
auth-service/src/blueprints/api/v1/users/: routes.py
auth-service/src/config/: db_config.py  load_config.py  logger_config.py  reverse_proxied.py
auth-service/src/controllers/: base_controller.py  user_controller.py  writable_controller.py
auth-service/src/db/: connection_manager.py
auth-service/src/decorators/: auth_required.py  database.py  exception_handlers.py  logging.py
auth-service/src/repositories/: __init__.py  base_repo.py  user_repo.py  writable_repo.py
auth-service/src/services/: base_service.py  user_service.py  writable_service.py
auth-service/src/util/filters/: base_filters.py
auth-service/src/util/schemas/: __init__.py  base_resource.py  query_params.py  related_resource.py  user.py
auth-service/static/: auth-api-v1.openapi.json
models/: README.md  pyproject.toml
models/src/: __init__.py  artist.py  user.py
models/src/models/: __init__.py  album.py  artist.py  base.py  track.py  user.py
models/src/models/filters/: __init__.py  album_filters.py  artist_filters.py  base_filters.py  track_filters.py
models/src/models/schemas/: __init__.py  query_params.py
models/src/models/schemas/albums/: __init__.py  album.py  album_query_params.py
models/src/models/schemas/artists/: __init__.py  artist.py  artist_query_params.py
models/src/models/schemas/tracks/: __init__.py  track.py  track_params.py  track_query_params.py
models/src/models/schemas/users/: __init__.py  user_token.py
seed/: .example.env  Dockerfile  dockerfile  pyproject.toml  seed.py
seed/data-subset/: listening-history-subset.csv  msd-summary-subset.h5  music-info-subset.csv
seed/src/: extractor.py  loader.py  main.py  sqlalchemy_loader.py  tables.py  transformer.py
seed/src/util/: relationship_ids.py  relationship_info.py  relationship_query.py  relationship_table.py  user.py
seed/tests/: test_extractor.py
tests/: README.md  develop-env.postman_environment.json  docker-env.postman_environment.json  prod-env.postman_environment.json  testing-env.postman_environment.json  tracks-api-health-check.postman_collection.json  tracks-api.postman_collection.json
tracks-api/: .example.env  README.md  dockerfile  pyproject.toml  requirements.txt
tracks-api/src/: main.py
tracks-api/src/apis/: __init__.py  v1_api.py
tracks-api/src/config/: __init__.py  db_config.py  load_env.py  settings.py
tracks-api/src/controllers/: album_controller.py  artist_controller.py  base_controller.py  track_controller.py  writable_controller.py
tracks-api/src/db/: async_connection_manager.py  connection_manager.py
tracks-api/src/decorators/: exception_handlers.py
tracks-api/src/dependencies/: __init__.py  auth.py  db.py  settings.py  static_openapi.py
tracks-api/src/repositories/: album_repo.py  artist_repo.py  base_repo.py  track_repo.py  writable_repo.py
tracks-api/src/routers/: router.py
tracks-api/src/routers/api/: api_router.py
tracks-api/src/routers/api/collections/: __init__.py  album_router.py  artist_router.py  track_router.py
tracks-api/src/routers/api/v1/: track_router.py  v1_router.py
tracks-api/src/services/: album_service.py  artist_service.py  base_service.py  track_service.py  writable_service.py
tracks-api/src/util/: error.py  paginated_response.py
tracks-api/static/: tracks-api-v1.openapi.json
tracks-api/tests/: test_paginated_response.py
