[project]
name = "tracks-api"
version = "2026.0.0"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "cryptography>=46.0.7",
    "dotenv>=0.9.9",
    "flask>=3.1.3",
    "flask-jwt-extended>=4.7.1",
    "psycopg2>=2.9.11",
    "psycopg2-binary>=2.9.11",
    "pydantic[email]>=2.12.5",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]
