[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "auth-service"
version = "0.1.0"
description = "An auth service API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "dotenv>=0.9.9",
    "flask>=3.1.3",
    "flask-jwt-extended>=4.7.4",
    "gunicorn>=26.0.0",
    "models",
    "psycopg2-binary>=2.9.12",
    "pydantic[email]>=2.13.4",
    "sqlalchemy>=2.0.50",
]

[dependency-groups]
dev = [
    "hatchling>=1.30.1",
    "pyright>=1.1.410",
    "ruff>=0.15.16",
]

[tool.uv.sources]
models = { path = "../models", editable = true }

[tool.pyright]
include = ["src"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
