[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "models"
version = "0.1.0"
description = "SQLAlchemy models for the Tracks API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.50",
]

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
    "pyright>=1.1.409",
    "ruff>=0.15.4",
]

[tool.pyright]
include = ["src"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
