[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/models"]

[project]
name = "models"
version = "0.1.0"
description = "SQLAlchemy models for the Tracks API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
    "sqlalchemy>=2.0.50",
]

[dependency-groups]
dev = [
    "datamodel-code-generator[ruff]>=0.62.0",
    "hatchling>=1.29.0",
    "pyright>=1.1.409",
    "ruff>=0.15.4",
]

[tool.pyright]
include = ["src"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
