[project]
name = "songs-to-postgres"
version = "2026.0.0"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.15.1",
    "pandas>=3.0.1",
    "psycopg2>=2.9.11",
    "python-dotenv>=1.2.2",
    "dotenv>=0.9.9",
    "bcrypt>=5.0.0",
    "models",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]

[tool.uv.sources]
models = { path = "../models" }
