[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "seed"
version = "0.1.0"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.15.1",
    "pandas>=3.0.1",
    "psycopg2>=2.9.11",
    "python-dotenv>=1.2.2",
    "dotenv>=0.9.9",
    "bcrypt>=5.0.0",
    "models",
    "sqlalchemy>=2.0.50",
    "numpy>=2.4.2",
]

[dependency-groups]
dev = [
    "hatchling>=1.30.1",
    "pyright>=1.1.410",
    "pytest>=9.0.3",
    "ruff>=0.15.4",
]

[tool.uv.sources]
models = { path = "../models", editable = true }

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--junitxml=test-reports/junit.xml"
