[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "tracks-api"
version = "0.1.0"
description = "Tracks REST API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.136.3",
    "httpx>=0.28.1",
    "models",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "hatchling>=1.30.1",
    "pyright>=1.1.410",
    "ruff>=0.15.16",
]

[tool.uv.sources]
models = { path = "../models", editable = true }

[tool.fastapi]
entrypoint = "src.main:app"

[tool.pyright]
include = ["src"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
