[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "tracks-api"
version = "0.2.0"
description = "Tracks REST API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "cryptography>=49.0.0",
    "fastapi[standard]>=0.136.3",
    "httpx>=0.28.1",
    "models",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy[asyncio]>=2.0.50",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "hatchling>=1.30.1",
    "pyright>=1.1.410",
    "pytest>=9.1.0",
    "ruff>=0.15.16",
]

[tool.uv.sources]
models = { path = "../models", editable = true }

[tool.fastapi]
entrypoint = "src.main:app"

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--junitxml=test-reports/junit.xml"
